# sat-bench

./: .gitignore  .merlin  LICENSE  Makefile  README.md  _tags  opam  sat-bench.opam
problems/pigeon/: results
problems/uuf100/: mean
problems/uuf125/: mean
problems/uuf150/: mean
src/: dune  main.ml
