opam-version: "2.0"
name: "sat-bench"
license: "todo"
version: "dev"
synopsis: "A small repo to test and benchmark different sat solvers"
author: ["Guillaume Bury"]
maintainer: ["Guillaume Bury"]
build: [
  ["dune" "build" "@all"]
]
depends: [
  "dune" {build}
  "oclock"
  "dolmen"
  "printbox"
  "base-unix"
  "msat"
  "minisat"
  "ocaml-sat-solvers"
  "aez"
  "mc2"
  "ocaml" { >= "4.03" }
]
tags: [ "sat" "bench" ]
homepage: "https://github.com/gbury/sat-bench"
dev-repo: "git+https://github.com/gbury/sat-bench.git"
bug-reports: "https://github.com/gbury/sat-bench/issues/"

